plugins {
    id 'java'
}

group = 'me.geuxy'
version = '1.1'

def main = 'me.geuxy.main.Main'

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

jar {

    manifest { attributes 'Main-Class': main }

    from {
        configurations.extraLibs.collect {it.isDirectory() ? it : zipTree(it) }
    }
}

repositories {
    mavenCentral()
}

configurations {
    extraLibs
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'


    compileOnly group: 'com.google.code.gson', name: 'gson', version: '2.7'

    extraLibs group: 'com.google.code.gson', name: 'gson', version: '2.7'

}